# CCFarms

./: .gitignore  Makefile  README.md  WorkerDockerfile  docker-compose.yml  paris_weather_report.txt  prefect.yaml  pyproject.toml  workerDockerfile
.cache/41/: cache.db
docs/: gifs_audio_to_video.md  goals.md  moviepy.md
docs/mongodb_manips/: scores.md
output/: Netflix's_AI_Upgrade_Turns_80s_Sitcom_into_Digital_Horror_Show_metadata.json
src/ccfarm/agents/: BaseAgent.py  __init__.py  base_agent.py
src/ccfarm/agents/debriefer/: analyze_prompt.j2  debriefer.py  models.py
src/ccfarm/agents/digger/: digger.py  digger_schema.json  score_prompt.j2
src/ccfarm/agents/illustrator/: comic_illustrator.py  dalle_prompt_generator.j2  models.py  system_message.j2
src/ccfarm/agents/satirist/: models.py  multi_article_prompt.j2  prompt.j2  satirist.py  system_message.j2
src/ccfarm/agents/scout/: models.py  score_prompt.j2  scorer.py  system_message.j2
src/ccfarm/agents/voice_actor/: system_message.j2  voice_generator.py
src/ccfarm/blocks/: __init__.py  news.py
src/ccfarm/blocks/storage/: __init__.py  article_cache_block.py  brief_storage_block.py  script_storage_block.py
src/ccfarm/clients/: news_client.py
src/ccfarm/flows/: comedy_generation_flow.py  debriefer_flow.py  generate _news_youtube_video.py  generate_articles_scripts.py  generate_script_video.py  news_scoring_flow.py  voice_generation_flow.py
src/ccfarm/media/: audio_generator.py  dalle_video_gen.py  giphy_client.py  git_vid_generator.py  unsplash_client.py  video_generator.py  youtube_upload.py
src/ccfarm/persistence/: article_cache.py  brief_storage.py  scores_storage.py  script_storage.py
src/common/blocks/: __init__.py
src/draft/: system_message.j2  test.py  weather_agent.py  weather_prompt.j2  weather_schema.json
src/draft/flows/: weather_flow.py
src/networking/blocks/: __init__.py  metric_storage_block.py
src/networking/flows/network_data/: network_data_batch.py  network_data_process_flow.py
src/networking/persistence/: metric_storage.py
src/orchestration_play/agents/: __init__.py  digger.py  schema_agent.py
src/orchestration_play/agents/debriefer/: __init__.py  analyze_prompt.j2  debriefer.py  debriefer_schema.json  models.py  system_message.j2
src/orchestration_play/agents/digger/: digger.py  digger_schema.json  score_prompt.j2  system_message.j2
src/orchestration_play/agents/satirist/: prompt.j2  satirist.py  satirist_schema.json  system_message.j2
src/orchestration_play/blocks/: __init__.py  news.py
src/orchestration_play/blocks/dbs/: __init__.py  article_cache.py
src/orchestration_play/blocks/notifications/: __init__.py  teams_webhook.py
src/orchestration_play/blocks/storage/: __init__.py  brief_storage_block.py  metric_storage_block.py  script_storage_block.py
src/orchestration_play/clients/: news_client.py  skip_domains.json
src/orchestration_play/flows/: comedy_generation_flow.py  debriefer_flow.py  news_scoring_flow.py  weather_flow.py
src/orchestration_play/flows/network_data/: network_data_batch.py  network_data_process_flow.py
src/orchestration_play/persistence/: article_cache.py  brief_storage.py  script_storage.py
src/orchestration_play/utils/: __init__.py
tests/: create_aws_secret_block.py  create_video_segments.py  download_segments_gifs.py  generate_script_video.py  get_mdoel_json_schema.py  list_latest_briefs.py  simple_create_video_poc.py  test_article_cache.py  test_dalle_video_generation.py  test_news_api.py  test_teams-webhook.py  test_teams_notifications.py  test_voice_generator.py  youtube_video_uploader.py
tests/linkedin/: test_make_post.py
tests/network_data_inputs/: data_example.csv
