[tool.poetry]
name = "orchestration-play"
version = "0.1.0"
description = "Orchestration flows with Prefect"
authors = ["Khalid MAJDOUB <khalid.majdoub@sidetrade.com>"]
packages = [
    { include = "orchestration_play", from = "src" },
    { include = "draft", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
prefect = "2.20.16"
requests = ">=2.31.0"
anthropic = ">=0.3.11"
python-dotenv = ">=1.0.0"
tenacity = "^9.0.0"
trafilatura = "^2.0.0"
bs4 = "^0.0.2"
pymongo = "^4.11.1"
autogen = "<0.7.0"
pydantic = "1.10.13" 
watchdog = "^6.0.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
mypy = "^1.10.0"
types-requests = "^2.32.0.20241016"
types-python-dateutil = "^2.9.0.20241206"
types-pyyaml = "^6.0.12.20241230"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
